--- a/css/style.css
+++ b/css/style.css
@@ -700,3 +700,216 @@ img {
     text-align: center;
     -webkit-tap-highlight-color: transparent;
 }
+
+/*Blog*/
+
+.blog {
+    position: relative;
+    padding: 80px 0px;
+}
+
+.blog-top {
+	position: relative;
+	padding-top: 50px;
+}
+
+.blog-img img {
+	width: 100%;
+	height: 250px;
+	object-fit: cover;
+	text-align: center;
+	display: block;
+	transition: all .4s ease-in-out 0s;
+
+}
+
+.blog-list li {
+	display: inline-block;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	padding-right: 10px;
+}
+
+.blog-list li .fa {
+	color: #666;
+	padding-right: 2px;
+}
+
+.blog-text {
+	position: relative;
+}
+
+.blog-text p {
+	font-size: 14px;
+	color: #666;
+	padding-top: 10px;
+	line-height: 23px;
+}
+
+.title-blog {
+	font-size: 17px;
+	color: #444;
+	font-weight: 700;
+	letter-spacing: 0.5px;
+	text-transform: uppercase;
+}
+
+.title-blog:hover {
+	color: #00a6ed;
+}
+
+.btn-blog:hover {
+	background-color: #00a6ed;
+	transition: all .4s ease-in-out 0s;
+}
+
+/*contact*/
+
+.contact {
+    position: relative;
+    padding: 80px 0px;
+}
+
+.contact-form {
+	padding-top: 30px;
+}
+
+.contact-form .form-control {
+    font-size: 14px;
+    line-height: 16px;
+    color: #111;
+    background: none;
+    border-bottom: 1px solid #000;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    height: 38px;
+    padding: 10px 0;
+    outline: none;
+    box-shadow: none;
+    border-radius: 0;
+    margin: 15px 0px;
+    letter-spacing: 1px;
+}
+
+.contact-form textarea {
+  font-size: 14px;
+  line-height: 16px;
+  color: #b9b9b9;
+  background: none;
+  border: 1px solid #fff;
+  width: 100%;
+  min-height: 160px;
+  padding: 8px 12px;
+  outline: none;
+  box-shadow: none;
+  border-radius: 0;
+  margin: 0 0 15px;
+  letter-spacing: 1px;
+  resize: none;
+}
+
+.contact-btn {
+	border: 1px solid transparent;
+	border-radius: 0px;
+	padding: 8px 20px;
+	background-color: #00a6ed;
+	color: #fff;
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: 700;
+	margin-top: 20px;
+	transition: all .3s ease-in-out 0s;
+}
+
+.contact-btn:hover {
+	background-color: transparent;
+	border-color: #000;
+	color: #000;
+	-webkit-transition: all .4s ease-in-out 0s;
+	-moz-transition: all .4s ease-in-out 0s;
+	-ms-transition: all .4s ease-in-out 0s;
+	transition: all .4s ease-in-out 0s;
+}
+
+#form-chack {
+  display: none;
+  margin: 0 10px;
+}
+
+#form-chack.error,
+#form-chack.send {
+  display: block;
+  padding: 7px 15px;
+  margin-bottom: 15px;
+  font-weight: 700;
+  border-radius: 25px;
+  color: #fff;
+  position: absolute;
+  top: -40px;
+  height: 35px;
+  min-width: 90px;
+  text-align: center;
+  z-index: 888;
+  font-size: 16px;
+  left: 15px;
+}
+
+#form-chack.error {
+  background: #d03636;
+}
+
+#form-chack.send {
+  background: #00BC58;
+}
+
+.contact-info {
+	position: relative;
+	margin-top: 80px;
+	text-align: center;
+}
+
+.contact-info p {
+	padding-top: 20px;
+}
+
+/*Footer*/
+
+#map {
+	height: 350px;
+	width: 100%;
+	background: #F8F8F8;
+	background-repeat:  no-repeat;
+}
+
+.footer-bottom {
+	position: relative;
+	padding: 40px 0px;
+	background-color: #333;
+	text-align: center;
+}
+
+.footer-bottom ul li {
+    background-color: transparent;
+    color: #7fb800;
+    text-align: center;
+    display: inline-block;
+    margin: 10px;
+    margin-bottom: 15px;
+    margin-left: 0;
+    border: 1px solid #fff;
+    padding: 7px 10px;
+    width: 35px;
+    border-radius: 50%;
+    height: 35px;
+}
+
+.footer-bottom i.fa {
+	font-size: 16px;
+	color: #fff;
+}
+
+.copyright p {
+	color: #fff;
+}
